--- a/cpp_example/cpp_example_vs2019.vcxproj
+++ b/cpp_example/cpp_example_vs2019.vcxproj
@@ -78,23 +78,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)json-c\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)json-c\lib\x86;$(SolutionDir)curl\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)jsoncpp\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)jsoncpp\lib\x86\Debug;$(SolutionDir)curl\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)json-c\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)json-c\lib\x86;$(SolutionDir)curl\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)jsoncpp\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)jsoncpp\lib\x86\Release;$(SolutionDir)curl\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)json-c\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)json-c\lib\x64;$(SolutionDir)curl\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)jsoncpp\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)jsoncpp\lib\x64\Debug;$(SolutionDir)curl\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)json-c\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)json-c\lib\x64;$(SolutionDir)curl\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)jsoncpp\include;$(SolutionDir)curl\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)jsoncpp\lib\x64\Release;$(SolutionDir)curl\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -106,7 +106,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>json-c-static.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
+      <AdditionalDependencies>jsoncpp.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -123,7 +123,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>json-c-static.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
+      <AdditionalDependencies>jsoncpp.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -136,7 +136,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>json-c-static.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
+      <AdditionalDependencies>jsoncpp.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -153,7 +153,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>json-c-static.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
+      <AdditionalDependencies>jsoncpp.lib;libcurl.lib;ws2_32.lib;wldap32.lib;advapi32.lib;kernel32.lib;crypt32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
